<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

    <android.support.v7.widget.CardView
            android:transitionName="bgCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp"
            >

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

            <TextView
                    android:id="@+id/head"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/hello"
                    android:textColor="?attr/colorAccent"
                    style="@style/TextAppearance.AppCompat.Headline"
                    />

            <android.support.design.button.MaterialButton
                    android:id="@+id/create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/Theme.MaterialComponents.NoActionBar"
                    android:padding="12dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:text="@string/signUp"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/white"
                    android:elevation="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_marginEnd="8dp"
                    app:cornerRadius="8dp"
                    />

            <android.support.design.button.MaterialButton
                    android:id="@+id/eatLogin"
                    android:transitionName="register"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    style="@style/Theme.MaterialComponents.NoActionBar"
                    android:padding="12dp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    android:textColor="@android:color/white"
                    android:elevation="2dp"
                    app:cornerRadius="64dp"
                    />

            <android.support.v7.widget.CardView
                    android:id="@+id/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="8dp"
                    app:contentPadding="12dp"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="0dp"
                    >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textColor="?attr/colorAccent"
                        />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    android:id="@+id/eatRegister"
                    android:transitionName="cancel"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="16dp"
                    app:contentPadding="12dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="64dp"
                    >

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textColor="?attr/colorAccent"
                        />

            </android.support.v7.widget.CardView>

            <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/userImage"
                    android:transitionName="image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_below="@id/head"
                    android:layout_marginTop="24dp"
                    android:src="@drawable/ic_person"
                    app:civ_border_color="?android:attr/textColorPrimary"
                    app:civ_border_width="2dp"
                    app:civ_background_color="?attr/colorAccent"
                    />

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/nameLayout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/head"
                    android:layout_toEndOf="@id/userImage"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="48dp"
                    android:hint="@string/name"
                    app:errorEnabled="true"
                    >

                <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/dateLayout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/userImage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/dob"
                    app:errorEnabled="true"
                    >

                <EditText
                        android:id="@+id/dob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:focusable="false"
                        android:longClickable="false"
                        />

            </android.support.design.widget.TextInputLayout>

            <TextView
                    android:id="@+id/gendTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gend"
                    android:layout_marginStart="8dp"
                    android:textSize="18sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:layout_below="@id/dateLayout"
                    />

            <RadioGroup
                    android:id="@+id/genderSel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_below="@id/gendTitle"
                    android:orientation="horizontal"
                    >

                <RadioButton
                        android:id="@+id/gendMale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/male"
                        android:textColor="?android:attr/textColorSecondary"
                        />

                <RadioButton
                        android:id="@+id/gendFemale"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/female"
                        android:textColor="?android:attr/textColorSecondary"
                        />

                <RadioButton
                        android:id="@+id/gendOthers"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/others"
                        android:textColor="?android:attr/textColorSecondary"
                        />

            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailLayout"
                    android:transitionName="username"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/genderSel"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/Email"
                    app:errorEnabled="true"
                    >

                <EditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/passLayout"
                    android:transitionName="password"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/emailLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="16dp"
                    android:hint="@string/Password"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    >

                <EditText
                        android:id="@+id/userPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/uidLayout"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/passLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="16dp"
                    android:hint="@string/uid"
                    app:errorEnabled="true"
                    >

                <EditText
                        android:id="@+id/userUid"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        />

            </android.support.design.widget.TextInputLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>