<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

    <android.support.v7.widget.CardView
            android:id="@+id/cardBG"
            android:transitionName="bgCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="16dp"
            >

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

            <com.mikhaellopez.circularimageview.CircularImageView
                    android:id="@+id/userImage"
                    android:transitionName="image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_person"
                    app:civ_border_color="?android:attr/textColorPrimary"
                    app:civ_border_width="2dp"
                    app:civ_background_color="?attr/colorAccent"
                    />

            <ImageView
                    android:id="@+id/changeAvatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_settings_cog"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    />

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/nameLayout"
                    android:transitionName="username"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/userImage"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/Email"
                    app:errorEnabled="true"
                    >

                <EditText
                        android:id="@+id/userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/passLayout"
                    android:transitionName="password"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_below="@id/nameLayout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="16dp"
                    android:hint="@string/Password"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    >

                <EditText
                        android:id="@+id/userPass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.button.MaterialButton
                    android:id="@+id/loginButton"
                    android:transitionName="register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Theme.MaterialComponents.NoActionBar"
                    android:padding="12dp"
                    android:layout_marginStart="64dp"
                    android:text="@string/login"
                    android:textAlignment="center"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:layout_below="@id/passLayout"
                    android:textColor="@android:color/white"
                    android:elevation="2dp"
                    android:clickable="true"
                    android:focusable="true"
                    app:cornerRadius="64dp"
                    />

            <android.support.v7.widget.CardView
                    android:id="@+id/register"
                    android:transitionName="cancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/loginButton"
                    android:layout_marginStart="64dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:contentPadding="12dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="64dp"
                    >

                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/register"
                        android:textAlignment="center"
                        android:textColor="?attr/colorAccent"
                        />

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>