<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <RelativeLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/header_bg"
            android:fitsSystemWindows="true"
            >

        <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/userImage"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_person"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                app:civ_background_color="?attr/colorAccent"
                />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="64dp"
                android:layout_toEndOf="@id/userImage"
                >

            <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defUser"
                    style="@style/TextAppearance.AppCompat.Headline"
                    android:layout_centerHorizontal="true"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="60dp"
                    />

        </RelativeLayout>

    </RelativeLayout>

    <android.support.v7.widget.CardView
            android:id="@+id/contentView"
            android:transitionName="bgCard"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/head"
            android:layout_marginTop="-48dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="24dp"
            >

        <RelativeLayout
                android:id="@+id/MainView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

            <ImageView
                    android:id="@+id/settIcon"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:src="@drawable/ic_settings_cog"
                    android:tint="?attr/colorAccent"
                    />

            <android.support.v7.widget.CardView
                    android:id="@+id/refreshBalance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/settIcon"
                    android:layout_marginTop="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:contentPadding="12dp"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="16dp"
                    app:cardBackgroundColor="?attr/customCardColor"
                    >

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                    <TextView
                            android:id="@+id/balHead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/balanceHead"
                            style="@style/TextAppearance.AppCompat.Headline"
                            android:textStyle="bold"
                            android:layout_centerHorizontal="true"
                            />

                    <ImageView
                            android:id="@+id/walletIc"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_wallet"
                            android:tint="?attr/colorAccent"
                            />

                    <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="64dp"
                            android:layout_toEndOf="@id/walletIc"
                            android:layout_below="@id/balHead"
                            android:layout_marginEnd="32dp"
                            >

                        <TextView
                                android:id="@+id/availBal"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/currBal"
                                style="@style/TextAppearance.AppCompat.Display1"
                                android:layout_centerInParent="true"
                                android:textStyle="bold"
                                />

                    </RelativeLayout>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                    android:id="@+id/logoutButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?android:attr/selectableItemBackground"
                    app:cardCornerRadius="8dp"
                    app:contentPadding="12dp"
                    app:cardUseCompatPadding="true"
                    app:cardElevation="0dp"
                    >

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout"
                        android:textColor="?attr/colorAccent"
                        />

            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>